--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-burger-menu": "^0.2.7"
+    "redux-burger-menu": "^0.2.7",
+    "redux-responsive": "^4.3.7",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
