--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "react": "^16.4.1",
+    "react-animated-css": "^1.0.4",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -14,7 +15,8 @@
     "redux": "^4.0.0",
     "redux-burger-menu": "^0.2.7",
     "redux-responsive": "^4.3.7",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
