--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rocket-corp",
   "version": "0.1.0",
+  "homepage": "http://vitorr32.github.io/rocket-corp",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
@@ -14,6 +15,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-burger-menu": "^0.2.7",
+    "redux-logger": "^3.0.6",
     "redux-responsive": "^4.3.7",
     "redux-thunk": "^2.3.0",
     "wowjs": "^1.1.3"
@@ -22,6 +24,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
